[package]
name = "wasm-printer"
version = "0.1.0"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
edition = "2021"
repository = "https://github.com/axetroy/wasm-wasm-printer"
readme = "README.md"
description = "Parse wasm file to wat"
license = "Anti-996"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.85"
js-sys = "0.3.62"
wasmprinter = "0.2.57"
wasm-bindgen-futures = "0.4.35"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.61"
features = ["console", "FileReader", "Blob"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.62"
